# PolePositionCR

./: .gitignore  Documentacion_escrita_tarea_3.docx  Manual de Usuario Pole Position.docx
GUI/: CMakeLists.txt  main.c
GUI/Clientes/: Cliente.c  Cliente.h
GUI/LinkedList/: LinkedList.c  LinkedList.h
GUI/Window/: Game.c  Game.h  GameConstantes.h
GUI/Window/Game/: Game.c  Game.h  GameConstantes.h
GUI/Window/MainWindow/: MainWindow.c  MainWindow.h  MainWindowConstantes.h
GUI/Window/SelectionMenu/: SelectionMenu.c  SelectionMenu.h  SelectionMenuConstates.h
GUI/Window/Tools/: Tools.c  Tools.h
Server/src/: Main.java
Server/src/Eventos/: Disparo.java  EventManager.java  Evento.java  Hueco.java  Turbo.java  Ventana.java  Vida.java
Server/src/Eventos/LinkedList/: Jugador.java  LinkedList.java
Server/src/GsonManager/: Deserializacion.java  Informacion.java  Serializacion.java  UsuarioSimple.java
Server/src/ServidorSockets/: Cliente.java  Servidor.java
Server_PolePosition/: CMakeLists.txt  main.c
